--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,35 @@
 asgiref==3.6.0
 certifi==2022.12.7
+cffi==1.15.1
 charset-normalizer==3.1.0
+coreapi==2.3.3
+coreschema==0.0.4
+cryptography==41.0.1
 Django==4.1.7
+django-debug-toolbar==4.1.0
+django-filter==23.2
 django-jazzmin==2.6.0
 django-rest-auth==0.9.5
 django-rest-authemail==2.1.4
 djangorestframework==3.14.0
+drf-yasg==1.21.6
 idna==3.4
+inflection==0.5.1
+itypes==1.2.0
+Jinja2==3.1.2
+MarkupSafe==2.1.3
+packaging==23.1
+paypalrestsdk==1.13.1
 Pillow==9.4.0
+pycparser==2.21
+pyOpenSSL==23.2.0
 pyotp==2.8.0
 pytz==2022.7.1
+PyYAML==6.0
 requests==2.28.2
 six==1.16.0
 sqlparse==0.4.3
+typing_extensions==4.6.3
 tzdata==2022.7
+uritemplate==4.1.1
 urllib3==1.26.15
-django-filter~=23.2
