--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ django-rest-auth==0.9.5
 django-rest-authemail==2.1.4
 djangorestframework==3.14.0
 drf-yasg==1.21.6
+gunicorn==20.1.0
 idna==3.4
 inflection==0.5.1
 itypes==1.2.0
