--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 asgiref==3.6.0
+CacheControl==0.13.1
+cachetools==5.3.1
 certifi==2022.12.7
 cffi==1.15.1
 charset-normalizer==3.1.0
@@ -13,21 +15,43 @@ django-rest-auth==0.9.5
 django-rest-authemail==2.1.4
 djangorestframework==3.14.0
 drf-yasg==1.21.6
+firebase-admin==6.2.0
+google-api-core==2.11.1
+google-api-python-client==2.91.0
+google-auth==2.21.0
+google-auth-httplib2==0.1.0
+google-cloud-core==2.3.2
+google-cloud-firestore==2.11.1
+google-cloud-storage==2.10.0
+google-crc32c==1.5.0
+google-resumable-media==2.5.0
+googleapis-common-protos==1.59.1
+grpcio==1.56.0
+grpcio-status==1.56.0
 gunicorn==20.1.0
+httplib2==0.22.0
 idna==3.4
 inflection==0.5.1
 itypes==1.2.0
 Jinja2==3.1.2
 MarkupSafe==2.1.3
+msgpack==1.0.5
 packaging==23.1
 paypalrestsdk==1.13.1
 Pillow==9.4.0
+proto-plus==1.22.3
+protobuf==4.23.3
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
 pycparser==2.21
+PyJWT==2.7.0
 pyOpenSSL==23.2.0
 pyotp==2.8.0
+pyparsing==3.1.0
 pytz==2022.7.1
 PyYAML==6.0
 requests==2.28.2
+rsa==4.9
 six==1.16.0
 sqlparse==0.4.3
 typing_extensions==4.6.3
