--- a/requirements.txt
+++ b/requirements.txt
@@ -7,12 +7,12 @@ charset-normalizer==3.1.0
 coreapi==2.3.3
 coreschema==0.0.4
 cryptography==41.0.1
-Django==4.1.7
-django-debug-toolbar==4.1.0
+Django==3.2.20
 django-filter==23.2
 django-jazzmin==2.6.0
 django-rest-auth==0.9.5
 django-rest-authemail==2.1.4
+django_debug_toolbar==3.8.1
 djangorestframework==3.14.0
 drf-yasg==1.21.6
 firebase-admin==6.2.0
@@ -36,6 +36,7 @@ itypes==1.2.0
 Jinja2==3.1.2
 MarkupSafe==2.1.3
 msgpack==1.0.5
+mysqlclient==2.2.0
 packaging==23.1
 paypalrestsdk==1.13.1
 Pillow==9.4.0
