--- a/requirements.txt
+++ b/requirements.txt
@@ -43,10 +43,13 @@ paypalrestsdk==1.13.1
 Pillow==9.4.0
 proto-plus==1.22.3
 protobuf==3.20.3
+psycopg2==2.9.6
+psycopg2-binary==2.9.6
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
 pycparser==2.21
 PyJWT==2.7.0
+PyMySQL==1.1.0
 pyOpenSSL==23.2.0
 pyotp==2.8.0
 pyparsing==3.1.0
