--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,18 @@ django_debug_toolbar==3.8.1
 djangorestframework==3.14.0
 drf-yasg==1.21.6
 firebase-admin==6.2.0
+google-api-core==2.11.1
+google-api-python-client==2.91.0
+google-auth==2.21.0
+google-auth-httplib2==0.1.0
+google-cloud-core==2.3.2
+google-cloud-firestore==2.11.1
+google-cloud-storage==2.10.0
+google-crc32c==1.5.0
+google-resumable-media==2.5.0
+googleapis-common-protos==1.59.1
 grpcio==1.56.0
+grpcio-status==1.56.0
 gunicorn==20.1.0
 httplib2==0.22.0
 idna==3.4
@@ -25,10 +36,13 @@ itypes==1.2.0
 Jinja2==3.1.2
 MarkupSafe==2.1.3
 msgpack==1.0.5
+mysql-connector-python==8.0.33
+mysqlclient==2.1.1
 packaging==23.1
 paypalrestsdk==1.13.1
 Pillow==9.4.0
 proto-plus==1.22.3
+protobuf==3.20.3
 psycopg2-binary==2.9.6
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
