--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,13 @@ cachetools==5.3.1
 certifi==2022.12.7
 cffi==1.15.1
 charset-normalizer==3.1.0
+cloudinary==1.33.0
 coreapi==2.3.3
 coreschema==0.0.4
 cryptography==41.0.1
+Deprecated==1.2.14
 Django==3.2.20
+django-cloudinary-storage==0.3.0
 django-filter==23.2
 django-jazzmin==2.6.0
 django-rest-auth==0.9.5
@@ -16,6 +19,7 @@ django_debug_toolbar==3.8.1
 djangorestframework==3.14.0
 drf-yasg==1.21.6
 firebase-admin==6.2.0
+gcloud==0.18.3
 google-api-core==2.11.1
 google-api-python-client==2.91.0
 google-auth==2.21.0
@@ -34,27 +38,32 @@ idna==3.4
 inflection==0.5.1
 itypes==1.2.0
 Jinja2==3.1.2
+jwcrypto==1.5.0
 MarkupSafe==2.1.3
 msgpack==1.0.5
 mysql-connector-python==8.0.33
 mysqlclient==2.1.1
+oauth2client==4.1.3
 packaging==23.1
 paypalrestsdk==1.13.1
 Pillow==9.4.0
 proto-plus==1.22.3
 protobuf==3.20.3
-psycopg2-binary==2.9.6
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
 pycparser==2.21
+pycryptodome==3.18.0
 PyJWT==2.7.0
 PyMySQL==1.1.0
 pyOpenSSL==23.2.0
 pyotp==2.8.0
 pyparsing==3.1.0
+Pyrebase4==4.7.1
+python-jwt==4.0.0
 pytz==2022.7.1
 PyYAML==6.0
 requests==2.28.2
+requests-toolbelt==0.10.1
 rsa==4.9
 six==1.16.0
 sqlparse==0.4.3
@@ -63,3 +72,4 @@ tzdata==2022.7
 uritemplate==4.1.1
 urllib3==1.26.15
 whitenoise==6.5.0
+wrapt==1.15.0
